Ajuste SonarLint e Lista de itens abrangentes